changed padding on mobile veiw to fix margin pushing

--- a/wp-content/themes/applesnacks5bootstrap/style.css
+++ b/wp-content/themes/applesnacks5bootstrap/style.css
@@ -160,5 +160,8 @@ footer {
 }
 /* Landscape phones and down */
 @media (max-width: 480px) {
+		.navbar-inverse .navbar-inner {
+		padding-left: 40px;
+	}
 }
 /* End Responsive */
